Fix backface-visibility bug

--- a/app/styles/components/_card.scss
+++ b/app/styles/components/_card.scss
@@ -46,8 +46,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    // backface-visibility: hidden;
+    // -webkit-backface-visibility: hidden;
   }
 
   &__front {
